@@ -94,7 +94,6 @@
     <Compile Include="Mono.Debugging.Evaluation\TypeValueReference.cs" />
     <Compile Include="Mono.Debugging.Evaluation\ValueReference.cs" />
     <Compile Include="Mono.Debugging.Evaluation\UserVariableReference.cs" />
-    <Compile Include="Mono.Debugging.Evaluation\Backtrace.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
